<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/mainImageView"
        android:layout_width="wrap_content"
        android:contentDescription="@string/mainDescription"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000000"
        android:scaleType="fitCenter"
        android:src="@drawable/startrek" />

    <Button
        android:id="@+id/trailersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custombutton"
        android:layout_weight="0.17"
        android:text="@string/trailers" />

    <Button
        android:id="@+id/accountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custombutton"
        android:layout_weight="0.15"
        android:text="@string/account" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custombutton"
        android:layout_weight="0.16"
        android:text="@string/logout" />

</LinearLayout>