<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".AccountActivity" >

    <ImageView
        android:id="@+id/vaderView"
        android:contentDescription="@string/vader_view_description"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="fitStart"
        android:src="@drawable/vader" />

    <EditText
        android:id="@+id/usernameAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_horizontal"
        android:hint="@string/usernameHint"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#C0C0C0" />

    <EditText
        android:id="@+id/firstNameAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_horizontal"
        android:hint="@string/firstNameHint"
        android:inputType="textPersonName"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#C0C0C0" />

    <EditText
        android:id="@+id/lastNamrAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_horizontal"
        android:hint="@string/lastNameHint"
        android:inputType="textPersonName"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#C0C0C0" />

    <EditText
        android:id="@+id/emailAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_horizontal"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#C0C0C0" />

    <Button
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custombutton"
        android:text="@string/resetPassText"
        android:textColor="#C0C0C0" />

</LinearLayout>