<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000000"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/repeatText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:hint="@string/passwordHint" >

            <requestFocus />
        </EditText>

        <LinearLayout

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">


         <Button
             android:id="@+id/createAccount"
             android:layout_marginTop="15dp"
             android:layout_weight="1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#C0C0C0"
             android:background="@drawable/custombutton"
             android:text="@string/create" 
             />

          <Button
             android:id="@+id/cancel"
             android:layout_marginTop="15dp"
             android:layout_weight="1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#C0C0C0"
             android:background="@drawable/custombutton"
             android:text="@string/cancel" 
             />

         </LinearLayout>


</LinearLayout>
